Cambios para tortas

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 
-    <h1>Listado de Instrumentos</h1>
+    <h1>Listado de Tortas</h1>
     <div id="react"></div>
 
     <script src="built/bundle.js"></script>
